add zio test